--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </a>
                 </ul>
 
-                <a href="Arshdeep Karwal - UofM Student Comp. Eng. - Resume.pdf" target="_blank" rel="noreferrer noopener" style="text-decoration: none;">
+                <a href="Arshdeep Karwal - UofM Comp. Eng. - Resume.pdf" target="_blank" rel="noreferrer noopener" style="text-decoration: none;">
                         <button id="button">
                             <div class="btn">
                                 <div>
@@ -76,23 +76,67 @@
         </div>
         <div class="exp_button_bar">
             <button class="exp_buttons">
-                Work
-            </button>
-            <button class="exp_buttons">
                 Education
             </button>
+            <button class="exp_buttons">
+                Work
+            </button>
         </div>
+        
         <div class="tab_panel">
             <ul style="margin: 0 0 0 50px; border-left: 1px solid rgba(193, 243, 252, 0.541); height: inherit;">
                 <li class="tab_info" style="list-style: none;">
                     <div class="position_logo"><img class="logos" src="assets/uofm_logo.png"></div>
-                    University of Manitoba
+                    <div class="tab_sub_title">Sept. 2024 - Present</div>
+                    <div class="tab_title">University of Manitoba</div>
+                    <div class="tab_sub_title">B.Sc. Computer Engineering</div>
+                    <ul class="tab_desc">
+                        <li>Grade: 4.3/4.5 GPA</li>
+                        <li>UM Queen Elizabeth II and President's Scholarship - Tier 1</li>
+                        <li>Relevant Course Work: Engineering Design and Communication, Analysis of Electrical Circuits and Digital Systems, Analysis of Structures in Equilibrium, Introductory Thermodynamics and Mechanics, Calculus I and II.</li>
+                    </ul>
                 </li>
-                <li style="list-style: none;">
-                    
+                <li class="tab_info" style="list-style: none;">
+                    <div class="position_logo"><img class="logos" src="assets/mci_logo.png"></div>
+                    <div class="tab_sub_title">Sept. 2020 - June 2024</div>
+                    <div class="tab_title">Maples Collegiate Institue</div>
+                    <div class="tab_sub_title">High School Diploma</div>
+                    <ul class="tab_desc">
+                        <li>Grade: 97.4% Average</li>
+                    </ul>
                 </li>
             </ul>
         </div>
+
+        <!-- WORK EXP -->
+
+        <!-- <div class="tab_panel">
+            <ul style="margin: 0 0 0 50px; border-left: 1px solid rgba(193, 243, 252, 0.541); height: inherit;">
+                <li class="tab_info" style="list-style: none;">
+                    <div class="position_logo"><img class="logos" src="assets/security_logo.jpg"></div>
+                    <div class="tab_sub_title">June 2024 - Sept. 2024</div>
+                    <div class="tab_title">Private Security Guard - Volunteer</div>
+                    <div class="tab_sub_title">Winnipeg, MB</div>
+                    <ul class="tab_desc">
+                        <li>Monitored and greeted the guests at the entrance to a private bar festival at St. Ambroise Provincial Park every weekend for the summer.</li>
+                        <li>Maintained the amount of people on the patio as per the limit and limited the amount of exterior liquor. </li>
+                        <li>Conducted 20 minute patrols on foot along both the beachside trail and event space.</li>
+                    </ul>
+                </li>
+                <li class="tab_info" style="list-style: none;">
+                    <div class="position_logo"><img class="logos" src="assets/maples_cc_logo.png"></div>
+                    <div class="tab_sub_title">Jan. 2024 - Sept. 2024</div>
+                    <div class="tab_title">Maples Community Soccer Program</div>
+                    <div class="tab_sub_title">Winnipeg, MB</div>
+                    <ul class="tab_desc">
+                        <li>Conducted training sessions for children aged 8-13 through a developed soccer program using previous gained knowledge and experience.</li>
+                        <li>Fostered a supportive and encouraging environment to build individual confidence along with prioritizing teamwork.</li>
+                        <li>Monitored and evaluated individual progress to parents while providing personalized feedback and guidance.</li>
+                    </ul>
+                </li>
+            </ul>
+        </div> -->
+
     </div>
 
     <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.185);"></div>
