--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <header id="header" class="boxshadow">
             <div class="header_name_pic"><img src="assets/profile_pic.jpg" alt="Image here" class="pfp"/></div>
             <ul style="display: flex; margin: 0; padding: 0; gap: 3vmin;">    
-                <a id="button" href="#Home" class="links" style="font-size: 2vmin;">Home</a>
-                <a id="button" href="#Projects" class="links" style="font-size: 2vmin;">Projects</a>
-                <a id="button" href="#Contact" class="links" style="font-size: 2vmin;">Contact</a>
+                <a id="button" href="#Home" class="links" style="font-size: clamp(0.75rem, 1vw + 0.5rem, 1.20rem);">Home</a>
+                <a id="button" href="#Projects" class="links" style="font-size: clamp(0.75rem, 1vw + 0.5rem, 1.20rem);">Projects</a>
+                <a id="button" href="#Contact" class="links" style="font-size: clamp(0.75rem, 1vw + 0.5rem, 1.20rem);">Contact</a>
             </ul>
         </header>
 
