--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>    
     </div>
 
-    <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.185);"></div>
+    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div>
     
 
     <div class="experience">
@@ -134,17 +134,35 @@
                 </li>
             </ul>
         </div>
-
     </div>
 
-    <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.185);"></div>
+    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div>
 
     <!-- <div class="projects">
         <div class="name_tag" style="font-size: 25px; justify-content: left; font-weight: 400; padding-bottom: 10px;">
             Projects
         </div>
 
-    </div> -->
+        <div class="project_list">
+            <div class="project_panel" id="project_1">
+                <div class="tab_title">Automated Waste Sorting System</div>
+            </div>
+
+            <div class="project_panel" id="project_2">
+                <div class="tab_title">Personal Portfolio</div>
+            </div>
+        </div>
+    </div>
+
+    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div> -->
+
+    <div class="name_tag" style="font-size: 25px; justify-content: center; font-weight: 400;">
+        WORK IN PROGRESS
+    </div>
+
+    <div class="name_tag" style="font-size: 13px; justify-content: center; font-weight: 400; padding-bottom: 40px;">
+        Copyright &copy; 2025 Arshdeep Singh Karwal
+    </div>
     
 </body>
 </html>
