--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div>
 
-    <div id="Projects" class="projects">
+<!--     <div id="Projects" class="projects">
         <div class="name_tag" style="font-size: 25px; justify-content: left; font-weight: 400; padding-bottom: 10px;">
             Projects
         </div>
@@ -168,7 +168,7 @@
         </div>
     </div>
 
-    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div>
+    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div> -->
 
     <div id="Contact" class="projects">
         <div class="name_tag" style="font-size: 25px; justify-content: left; font-weight: 400; padding-bottom: 10px;">
