--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arshdeep Singh Karwal</title>
-    <link rel="icon" type="image/x-icon" href="assets/website_favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
