--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             You can contact me by filling out the form below. Thank you!
         </div>
 
-        <form method="post" name="contact_form" action="contact_form_handler.php" style="display: flex; flex-direction: column;">
+        <form method="post" name="contact_form" action="" style="display: flex; flex-direction: column;">
             <input type="text" name="name" placeholder="Name" class="form_box" style="margin-top: 20px;" required>
             <input type="email" name="email" placeholder="Email Address" class="form_box" required>
             <textarea type="text" name="message" placeholder="Message" rows="5" class="form_box" required></textarea> 
