--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
                 <ul class="tab_desc">
                     <li>This is my personal portfolio where I showcase my experience, projects, and skills.</li> 
-                    <li>I learnt the essentials of web-design such as links, buttons, forms with PHP, and tab-panels blended in using front-end styling with CSS.</li>
+                    <li>I learnt the essentials of web-design such as links, buttons, forms, and tab-panels blended in using front-end styling with CSS.</li>
                     <li>The website is designed to be responsive; meaning it adapts based on the viewing device.</li>
                 </ul>
                 
@@ -205,7 +205,6 @@
                     <div class="tech_stack">HTML</div>
                     <div class="tech_stack">CSS</div>
                     <div class="tech_stack">JavaScript</div>
-                    <div class="tech_stack">PHP</div>
                 </div>
             </div>
         </div>
@@ -222,7 +221,7 @@
             You can contact me by filling out the form below. Thank you!
         </div>
 
-        <form method="post" name="contact_form" action="" style="display: flex; flex-direction: column;">
+        <form name="contact_form" action="" style="display: flex; flex-direction: column;">
             <input type="text" name="name" placeholder="Name" class="form_box" style="margin-top: 20px;" required>
             <input type="email" name="email" placeholder="Email Address" class="form_box" required>
             <textarea type="text" name="message" placeholder="Message" rows="5" class="form_box" required></textarea> 
@@ -233,13 +232,6 @@
                 </button>
             </div>
         </form>
-
-        <script language="JavaScript">
-            var frmvalidator = new Validator("contact_form");
-            frmvalidator.addValidation("name", "req", "Please provide your name");
-            frmvalidator.addValidation("email", "req", "Please provide your email");
-            frmvalidator.addValidation("email", "email", "Please enter a valid email address");
-        </script>
     </div>
 
     <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div>
