--- a/index.html
+++ b/index.html
@@ -181,8 +181,12 @@
                 <div class="tab_desc" style="padding: 0;">Tech Stack Used:</div>
 
                 <div class="tab_desc" style="display: flex; flex-direction: row; gap: 5px; padding: 0;">
-                    <div class="tech_stack">C++</div>
-                    <div class="tech_stack">Ardunio Hardware</div>
+                    <div class="tech_stack">
+                        <img src="assets/stack_logo/c++_logo.svg" alt="C++_logo">C++
+                    </div>
+                    <div class="tech_stack">
+                        <img src="assets/stack_logo/arduino_logo.svg" alt="Arduino_logo">Ardunio Hardware
+                    </div>
                 </div>
             </div>
 
@@ -202,9 +206,15 @@
                 <div class="tab_desc" style="padding: 0;">Tech Stack Used:</div>
 
                 <div class="tab_desc" style="display: flex; flex-direction: row; gap: 5px; padding: 0;">
-                    <div class="tech_stack">HTML</div>
-                    <div class="tech_stack">CSS</div>
-                    <div class="tech_stack">JavaScript</div>
+                    <div class="tech_stack">
+                        <img src="assets/stack_logo/HTML5_Badge.svg" alt="HTML5">HTML
+                    </div>
+                    <div class="tech_stack">
+                        <img src="assets/stack_logo/CSS3_logo.svg" alt="CSS3">CSS
+                    </div>
+                    <div class="tech_stack">
+                        <img src="assets/stack_logo/javascript_logo.svg" alt="JavaScript">JavaScript
+                    </div>
                 </div>
             </div>
         </div>
@@ -243,7 +253,6 @@
                 <div>Oops! There was an error sending your message. Please try again later.</div>
             </div>
         </form>
-        
     </div>
 
     <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div>
