--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </a>
             </ul>
 
-            <a href="Arshdeep Karwal - UofM Comp. Eng. - Resume.pdf" target="_blank" rel="noreferrer noopener" style="text-decoration: none;">
+            <a href="Arshdeep Karwal - Comp Eng. - Resume.pdf" target="_blank" rel="noreferrer noopener" style="text-decoration: none;">
                 <button id="button">
                     <div class="btn">
                         <div>
