--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>    
     </div>
 
-    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div>
+    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301); padding-top: 40px;"></div>
     
 
     <div id="Experience" class="section_container">
@@ -158,7 +158,7 @@
         </div>
     </div>
 
-    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div>
+    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301); padding-top: 60px;"></div>
 
     <div id="Projects" class="section_container">
         <div class="name_tag" style="font-size: 25px; justify-content: left; font-weight: 400; padding-bottom: 10px;">
@@ -220,7 +220,7 @@
         </div>
     </div>
 
-    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div>
+    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301); padding-top: 60px;"></div>
 
     <div id="Contact" class="section_container">
         <div class="name_tag" style="font-size: 25px; justify-content: left; font-weight: 400;">
@@ -255,7 +255,7 @@
         </form>
     </div>
 
-    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301);"></div>
+    <div style="border-bottom: 1px solid rgba(91, 79, 255, 0.301); padding-top: 20px;"></div>
 
     <div class="name_tag" style="font-size: clamp(0.563rem, 1vw + 0.25rem, 0.875rem); justify-content: center; font-weight: 400; padding-bottom: 40px;">
         Copyright &copy; 2025 Arshdeep Singh Karwal
